# unified-agent-protocol

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
conformance/: generate_vectors.py  runner.py
conformance/test-vectors/: 01_valid_minimal.json  02_valid_full.json  03_missing_actor.json  04_missing_intent_goal.json  05_actor_no_agent_id.json  06_tool_denied.json  07_tool_not_allowed.json  08_risk_too_high.json  09_approval_required.json  10_dag_chain.json  11_field_masking.json  12_event_ordering.json  13_unsupported_version.json  14_empty_graph.json
docs/: ADAPTER_MAPPING.md  IMPLEMENTATION_GUIDE.md  PROPOSAL.md  SECURITY_MODEL.md  SPEC.md  gap-closure-plan.html
docs/diagrams/: uap_architecture.mmd
examples/: integration_test.py  local_runtime.py  openapi_import.py  task_invoke.json
examples/mcp-bridge/: README.md  demo.py
examples/quickstart/: minimal.py  task.json
schemas/: capability_card.schema.json  error.schema.json  event.schema.json  policy.schema.json  provenance.schema.json  task_graph.schema.json  uap_envelope.schema.json
spec/v0.1/: approval-lifecycle.md  capability-card.md  compatibility.md  context-contract.md  envelope.md  errors.md  events.md  index.md  policy.md  provenance.md  security.md  task-graph.md  transport-http.md  transport-sse.md
src/uap/: __init__.py  capabilities.py  cli.py  context.py  errors.py  events.py  identity.py  models.py  planner.py  policy.py  provenance.py  runtime.py  server.py  validation.py
src/uap/adapters/: __init__.py  a2a.py  agui.py  cloudevents.py  mcp.py  openapi.py
tests/: test_adapters.py  test_context.py  test_policy.py  test_runtime.py
