[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uap-reference"
version = "0.1.0"
description = "UAP — The control plane for agentic applications."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
uap-server = "uap.server:main"
uap = "uap.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["uap"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_imports = true
ignore_missing_imports = true
no_implicit_optional = true
# cache_bust = 1
